--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
-    "name": "barcodeapp",
+    "name": "testing",
     "description": "This project is really great.",
-    "slug": "barcodeapp",
+    "slug": "testing",
     "privacy": "public",
     "sdkVersion": "25.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Arrow.jpg",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/Arrow.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
